<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Tyndale House STEP Viewer</string>
    <string name="options">STEP Reader Options</string>
    <string name="exit">Exit</string>
    <string name="quit_message">Quit STEP Viewer?</string>
    <string name="help_text">This is the help text</string>
    <string name="downloads">Manage Content</string>
    <string name="download">Download Page</string>
    <string name="download_index">Download book index</string>
    <string name="download_books">Download Book Indexes</string>
    <string name="download_index_message">Do you want to download the index for this book?</string>
    <string name="download_message">You do not currently have this page. Do you want to download it?</string>
    <string name="index_available">The index for this book has already been downloaded</string>
    <string name="network_unavailable">Network currently unavailable</string>
    <string name="open_lex_library">Open Lexicon Library</string>
    <string name="open_comm_library">Open Commentary Library</string>
    <string name="about">About</string>
    <string name="about_message">Scripture Tools for Every Person is a Tyndale House project to build high quality free Bible tools for far-flung believers, pastors and scholars.\n\nIt aims to supply trustworthy resources for phones and low-spec computers with intermittent internet access.</string>
    <string name="coming_soon">Commentary library coming soon!</string>
    <string name="available_books">Available books</string>
    <string name="update_books">Update list</string>
    <string name="update_books_message">Would you like to download an updated list of books?</string>
    <string name="no_books">You currently do not have any book indexes</string>
    <string name="select_vol">Select storage volume</string>
    <string name="select_vol_message">Please select which storage volume you want to use to store STEP reader resources</string>
    <string name="select_existing_vol_message">You have existing STEP directories. Please select which volume you want to use.</string>
    <string name="index_missing">Error: Index file missing</string>
    <string name="go">Go</string>
    <string name="no_book">Please select a book first</string>
    <string name="choose_ref">Find</string>
    <string name="choose_ref1">Choose a letter</string>
    <string name="choose_ref2">Choose a page</string>
    <string name="choose_ref2a">Choose page beginning with word</string>
    <string name="choose_book">Select a book</string>
    <string-array name="books">
        <item>Crum</item>
        <item>Gesenius</item>
        <item>Jastrow</item>
        <item>Lane</item>
        <item>PayneSmith</item>
        <item>Wilson</item>
    </string-array>
    <string name="choose_starting_letter">Choose starting letter</string>
    <string name="choose_word">Choose word</string>
    <string-array name="alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="A">
        <item>@string/a</item>
        <item>@string/b</item>
        <item>@string/c</item>
        <item>@string/d</item>
        <item>@string/e</item>
        <item>@string/f</item>
        <item>@string/g</item>
        <item>@string/h</item>
        <item>@string/i</item>
        <item>@string/j</item>
        <item>@string/k</item>
        <item>@string/l</item>
        <item>@string/m</item>
        <item>@string/n</item>
        <item>@string/o</item>
        <item>@string/p</item>
        <item>@string/q</item>
        <item>@string/r</item>
        <item>@string/s</item>
        <item>@string/t</item>
        <item>@string/u</item>
        <item>@string/v</item>
        <item>@string/w</item>
        <item>@string/x</item>
        <item>@string/y</item>
        <item>@string/z</item>
        <item>@string/zz</item>
    </string-array>
    <string name="a">A</string>
    <string name="b">ABI</string>
    <string name="c">ABOLISH</string>
    <string name="d">ABOUT</string>
    <string name="e">ACCOMPLISH</string>
    <string name="f">ACT</string>
    <string name="g">ADONI</string>
    <string name="h">AFFAIRS</string>
    <string name="i">AFORE</string>
    <string name="j">AFTERNOON</string>
    <string name="k">AGREEMENT</string>
    <string name="l">ALMIGHTY</string>
    <string name="m">ALTOGETHER</string>
    <string name="n">AMONG</string>
    <string name="o">ANOINT</string>
    <string name="p">ANT</string>
    <string name="q">APACE</string>
    <string name="r">APPEASE</string>
    <string name="s">APPROACH</string>
    <string name="t">ARCTURUS</string>
    <string name="u">ARM</string>
    <string name="v">ARRAY</string>
    <string name="w">ARTILLERY</string>
    <string name="x">ASK</string>
    <string name="y">ASSENT</string>
    <string name="z">ASUPPIM</string>
    <string name="zz">AVEN</string>
</resources>