<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
	<!-- 
	<ProgressBar 
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
    />
    -->
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/choose_book"
        android:textSize="40dip"
    />
    <Spinner 
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_book"
        android:drawSelectorOnTop = "true"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/choose_ref1"
        android:textSize="40dip"
    />
    <Spinner 
        android:id="@+id/spinner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_ref1"
        android:drawSelectorOnTop = "true"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/choose_ref2"
        android:textSize="40dip"
    />
    <Spinner 
        android:id="@+id/spinner3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_ref2"
        android:drawSelectorOnTop = "true"
    />
    <Button
        android:id="@+id/button_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_ref" 
        android:textSize="20dip"
    />"
</LinearLayout>