<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <!--
    android:background="@drawable/menu1"
    
    <it.sephiroth.android.demo.MyGallery 
    	android:id="@+id/gallery"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center"
    	android:fadingEdge="none"
    	android:spacing="2dp"
    	/>
	-->

	<tynstep.android.viewer.MyGallery
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:blah="http://schemas.android.com/apk/res/tynstep.android.viewer"
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="false"
        android:gravity="center"
    	android:fadingEdge="none"
        blah:spacing="5dp"
        blah:unselectedAlpha="1.0"
        blah:animationDuration="200"
        blah:gravity="0"
        />
	
	<!--  
	<tynstep.android.viewer.imagezoom.ImageViewTouch
		android:id="@+id/imageViewTouch"
		android:scaleType="fitCenter"
		android:layout_width="match_parent"
		android:layout_height="match_parent" 
	/>
	-->
	
	<SlidingDrawer
	    android:id="@+id/drawer"
	    android:layout_width="match_parent"
    	android:layout_height="450dip"
		android:allowSingleTap="true"
		android:layout_alignParentBottom="true"
    	android:handle="@+id/handle"
    	android:content="@+id/content"
    	android:orientation="vertical"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:gravity="bottom" >
    	
    	<ImageView
      		android:id="@id/handle"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:src="@drawable/tray_handle_normal"
  		  	/>

	    	<LinearLayout
	    	    android:id="@id/content"
	    	    android:padding="20dip"
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="vertical"
	    		android:gravity="center" 
	    		android:background="@color/dark"
	   			android:cacheColorHint="@color/dark" >
	    		
	    		<TextView
			        android:id="@+id/text1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dip"
			        android:text="@string/choose_ref1"
			        android:textSize="40dip"
				    />
			    <Spinner 
			        android:id="@+id/spinner1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:prompt="@string/choose_ref1"
			        android:drawSelectorOnTop = "true"
				    />
			    <TextView
			        android:id="@+id/text2"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dip"
			        android:text="@string/choose_ref2"
			        android:textSize="40dip"
				    />
			    <Spinner 
			        android:id="@+id/spinner2"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:prompt="@string/choose_ref2a"
			        android:drawSelectorOnTop="true"
			        android:layout_marginBottom="20dip"
				    />
			    <Button
			        android:id="@+id/button_Submit" 
			        android:layout_width="200dip"
			        android:layout_height="wrap_content"
			        android:text="@string/choose_ref" 
			        android:paddingTop="10dip"
					android:paddingBottom="15dip"
			        android:background="@drawable/btn_green"
			        style="@style/ButtonText"
				    />
	    	</LinearLayout>


  	</SlidingDrawer>
	
	
</RelativeLayout>

<!--
    	<LinearLayout 
    	    android:orientation="vertical"
    		android:background="@color/background"
    		android:padding="10dip"
    		android:layout_width="match_parent"
    		android:layout_height="match_parent">
	    	<TextView
	    	    android:id="@+id/text1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:text="@string/choose_book"
		        android:textSize="40dip"
			    />
		    <Spinner 
		        android:id="@+id/spinner1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/choose_book"
		        android:drawSelectorOnTop = "true"
			    />
		    <TextView
		        android:id="@+id/text2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:text="@string/choose_ref1"
		        android:textSize="40dip"
			    />
		    <Spinner 
		        android:id="@+id/spinner2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/choose_ref1"
		        android:drawSelectorOnTop = "true"
			    />
		    <TextView
		        android:id="@+id/text3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:text="@string/choose_ref2"
		        android:textSize="40dip"
			    />
		    <Spinner 
		        android:id="@+id/spinner3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/choose_ref2"
		        android:drawSelectorOnTop = "true"
			    />
		    <Button
		        android:id="@+id/button_Submit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/choose_ref" 
		        android:textSize="20dip"
			    />
    	</LinearLayout>



	<it.sephiroth.android.library.imagezoom.ImageViewTouch
		android:id="@+id/imageView1"
		android:scaleType="fitCenter"
		android:layout_width="match_parent"
		android:layout_height="match_parent" 
		/>

	<SlidingDrawer
	    android:id="@+id/drawer"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:handle="@+id/handle"
    	android:content="@+id/content">
    	<ImageView
      		android:id="@id/handle"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:src="@drawable/tray_handle_normal"
  		  	/>
  	</SlidingDrawer>

<TextView  
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    />
<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>
 
<it.sephiroth.android.demo.ZoomableImageView 
    android:id="@+id/comic_viewer"
    android:scaleType="fitCenter"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	/>

<it.sephiroth.android.library.imagezoom.ImageViewTouch
	android:id="@+id/imageView1"
	android:scaleType="fitCenter"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	/>


<GridView  
    android:id="@+id/gridview"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:columnWidth="90dp"
    android:numColumns="auto_fit"
    android:verticalSpacing="10dp"
    android:horizontalSpacing="10dp"
    android:stretchMode="columnWidth"
    android:gravity="center"
	/>

<WebView 
    android:id="@+id/yourwebview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    />

<ImageSwitcher 
    android:id="@+id/switcher1" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"                 
    android:layout_alignParentLeft="true" 
    android:layout_alignParentRight="true" 
    android:layout_alignParentBottom="true"      
    /> 

<it.sephiroth.android.demo.FullGallery 
    android:id="@+id/gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" 
    />

-->